snapshots/serde/test_suite/tests/ui/remote/bad_getter.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 16
kind: unit
spaces:
  - name: main
    start_line: 16
    end_line: 16
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 0
        total_closures: 0
        average_functions: 0
        average_closures: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 3
        N1: 3
        n2: 1
        N2: 1
        length: 4
        estimated_program_length: 4.755
        purity_ratio: 1.189
        vocabulary: 4
        volume: 8
        difficulty: 1.5
        level: 0.667
        effort: 12
        time: 0.667
        bugs: 0.002
      loc:
        sloc: 1
        ploc: 1
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 1
        ploc_average: 1
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 1
        sloc_max: 1
        cloc_min: 0
        cloc_max: 0
        ploc_min: 1
        ploc_max: 1
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 159.957
        mi_sei: 155.17
        mi_visual_studio: 93.542
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 0
    total_closures: 0
    average_functions: 0
    average_closures: 0
    total: 0
    average: 0
    functions_min: 0
    functions_max: 0
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 0
    average: 0
    min: 0
    max: 0
  cognitive:
    sum: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 2
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 8
    N1: 19
    n2: 9
    N2: 12
    length: 31
    estimated_program_length: 52.529
    purity_ratio: 1.694
    vocabulary: 17
    volume: 126.711
    difficulty: 5.333
    level: 0.188
    effort: 675.794
    time: 37.544
    bugs: 0.026
  loc:
    sloc: 16
    ploc: 13
    lloc: 0
    cloc: 0
    blank: 3
    sloc_average: 8
    ploc_average: 6.5
    lloc_average: 0
    cloc_average: 0
    blank_average: 1.5
    sloc_min: 1
    sloc_max: 1
    cloc_min: 0
    cloc_max: 0
    ploc_min: 1
    ploc_max: 1
    lloc_min: 0
    lloc_max: 0
    blank_min: 0
    blank_max: 0
  nom:
    functions: 1
    closures: 0
    functions_average: 0.5
    closures_average: 0
    total: 1
    average: 0.5
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 100.446
    mi_sei: 69.416
    mi_visual_studio: 58.74
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
