snapshots/serde/test_suite/tests/ui/remote/nonremote_getter.rs.snap
---
source: tests/common/mod.rs
expression: funcspace_struct
---
name: "[filepath]"
start_line: 1
end_line: 15
kind: unit
spaces:
  - name: S
    start_line: 9
    end_line: 13
    kind: impl
    spaces:
      - name: get
        start_line: 10
        end_line: 12
        kind: function
        spaces: []
        metrics:
          nargs:
            total_functions: 1
            total_closures: 0
            average_functions: 1
            average_closures: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          nexits:
            sum: 1
            average: 1
            min: 1
            max: 1
          cognitive:
            sum: 0
            average: 0
            min: 0
            max: 0
          cyclomatic:
            sum: 1
            average: 1
            min: 1
            max: 1
          halstead:
            n1: 7
            N1: 7
            n2: 2
            N2: 3
            length: 10
            estimated_program_length: 21.651
            purity_ratio: 2.165
            vocabulary: 9
            volume: 31.699
            difficulty: 5.25
            level: 0.19
            effort: 166.421
            time: 9.246
            bugs: 0.01
          loc:
            sloc: 3
            ploc: 3
            lloc: 0
            cloc: 0
            blank: 0
            sloc_average: 3
            ploc_average: 3
            lloc_average: 0
            cloc_average: 0
            blank_average: 0
            sloc_min: 3
            sloc_max: 3
            cloc_min: 0
            cloc_max: 0
            ploc_min: 3
            ploc_max: 3
            lloc_min: 0
            lloc_max: 0
            blank_min: 0
            blank_max: 0
          nom:
            functions: 1
            closures: 0
            functions_average: 1
            closures_average: 0
            total: 1
            average: 1
            functions_min: 1
            functions_max: 1
            closures_min: 0
            closures_max: 0
          mi:
            mi_original: 135
            mi_sei: 119.164
            mi_visual_studio: 78.947
          abc:
            assignments: 0
            branches: 0
            conditions: 0
            magnitude: 0
            assignments_average: 0
            branches_average: 0
            conditions_average: 0
            assignments_min: 0
            assignments_max: 0
            branches_min: 0
            branches_max: 0
            conditions_min: 0
            conditions_max: 0
    metrics:
      nargs:
        total_functions: 1
        total_closures: 0
        average_functions: 1
        average_closures: 0
        total: 1
        average: 1
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 1
        average: 1
        min: 0
        max: 1
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 2
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 7
        N1: 8
        n2: 2
        N2: 3
        length: 11
        estimated_program_length: 21.651
        purity_ratio: 1.968
        vocabulary: 9
        volume: 34.869
        difficulty: 5.25
        level: 0.19
        effort: 183.063
        time: 10.17
        bugs: 0.011
      loc:
        sloc: 5
        ploc: 5
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 2.5
        ploc_average: 2.5
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 3
        sloc_max: 3
        cloc_min: 0
        cloc_max: 0
        ploc_min: 3
        ploc_max: 3
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 0.5
        closures_average: 0
        total: 1
        average: 0.5
        functions_min: 0
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 125.999
        mi_sei: 106.281
        mi_visual_studio: 73.683
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
  - name: main
    start_line: 15
    end_line: 15
    kind: function
    spaces: []
    metrics:
      nargs:
        total_functions: 0
        total_closures: 0
        average_functions: 0
        average_closures: 0
        total: 0
        average: 0
        functions_min: 0
        functions_max: 0
        closures_min: 0
        closures_max: 0
      nexits:
        sum: 0
        average: 0
        min: 0
        max: 0
      cognitive:
        sum: 0
        average: 0
        min: 0
        max: 0
      cyclomatic:
        sum: 1
        average: 1
        min: 1
        max: 1
      halstead:
        n1: 3
        N1: 3
        n2: 1
        N2: 1
        length: 4
        estimated_program_length: 4.755
        purity_ratio: 1.189
        vocabulary: 4
        volume: 8
        difficulty: 1.5
        level: 0.667
        effort: 12
        time: 0.667
        bugs: 0.002
      loc:
        sloc: 1
        ploc: 1
        lloc: 0
        cloc: 0
        blank: 0
        sloc_average: 1
        ploc_average: 1
        lloc_average: 0
        cloc_average: 0
        blank_average: 0
        sloc_min: 1
        sloc_max: 1
        cloc_min: 0
        cloc_max: 0
        ploc_min: 1
        ploc_max: 1
        lloc_min: 0
        lloc_max: 0
        blank_min: 0
        blank_max: 0
      nom:
        functions: 1
        closures: 0
        functions_average: 1
        closures_average: 0
        total: 1
        average: 1
        functions_min: 1
        functions_max: 1
        closures_min: 0
        closures_max: 0
      mi:
        mi_original: 159.957
        mi_sei: 155.17
        mi_visual_studio: 93.542
      abc:
        assignments: 0
        branches: 0
        conditions: 0
        magnitude: 0
        assignments_average: 0
        branches_average: 0
        conditions_average: 0
        assignments_min: 0
        assignments_max: 0
        branches_min: 0
        branches_max: 0
        conditions_min: 0
        conditions_max: 0
metrics:
  nargs:
    total_functions: 1
    total_closures: 0
    average_functions: 0.5
    average_closures: 0
    total: 1
    average: 0.5
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  nexits:
    sum: 1
    average: 0.5
    min: 0
    max: 1
  cognitive:
    sum: 0
    average: 0
    min: 0
    max: 0
  cyclomatic:
    sum: 4
    average: 1
    min: 1
    max: 1
  halstead:
    n1: 11
    N1: 20
    n2: 9
    N2: 11
    length: 31
    estimated_program_length: 66.583
    purity_ratio: 2.148
    vocabulary: 20
    volume: 133.98
    difficulty: 6.722
    level: 0.149
    effort: 900.642
    time: 50.036
    bugs: 0.031
  loc:
    sloc: 15
    ploc: 12
    lloc: 0
    cloc: 0
    blank: 3
    sloc_average: 3.75
    ploc_average: 3
    lloc_average: 0
    cloc_average: 0
    blank_average: 0.75
    sloc_min: 1
    sloc_max: 5
    cloc_min: 0
    cloc_max: 0
    ploc_min: 1
    ploc_max: 5
    lloc_min: 0
    lloc_max: 0
    blank_min: 0
    blank_max: 0
  nom:
    functions: 2
    closures: 0
    functions_average: 0.5
    closures_average: 0
    total: 2
    average: 0.5
    functions_min: 0
    functions_max: 1
    closures_min: 0
    closures_max: 0
  mi:
    mi_original: 100.742
    mi_sei: 70.046
    mi_visual_studio: 58.913
  abc:
    assignments: 0
    branches: 0
    conditions: 0
    magnitude: 0
    assignments_average: 0
    branches_average: 0
    conditions_average: 0
    assignments_min: 0
    assignments_max: 0
    branches_min: 0
    branches_max: 0
    conditions_min: 0
    conditions_max: 0
